--- a/containers/app.yml
+++ b/containers/app.yml
@@ -42,6 +42,7 @@ hooks:
     - exec:
         cd: $home/plugins
         cmd:
+          - git clone https://github.com/discourse/docker_manager.git
           - git clone https://github.com/discourse/discourse-doc-categories.git
           - git clone https://github.com/discourse/discourse-bbcode
           - git clone https://github.com/discourse/discourse-translator
