--- a/containers/app.yml
+++ b/containers/app.yml
@@ -8,7 +8,7 @@ expose:
 params:
   db_default_text_search_config: "pg_catalog.english"
   db_shared_buffers: "4096MB"
-  version: v3.5.0.beta8
+  version: v3.5.0.beta7
 
 # docker_args: "--net=host"
 # docker_args: "--network=discourse_build_network"
@@ -43,6 +43,10 @@ hooks:
         cd: $home/plugins
         cmd:
           - git clone https://github.com/discourse/docker_manager.git
+          - git clone https://github.com/discourse/discourse-solved
+          - git clone https://github.com/discourse/discourse-ai
+          - git clone https://github.com/discourse/discourse-topic-voting
+          - git clone https://github.com/discourse/discourse-adplugin
           - git clone https://github.com/discourse/discourse-doc-categories.git
           - git clone https://github.com/discourse/discourse-bbcode
           - git clone https://github.com/discourse/discourse-translator
